# yew-gol

./: Cargo.toml  index.html  readme.md
docs/: index.html  main-c7ffab1bb2a45d8c.css  yew-life-25a9237138eabdca.js  yew-life-25a9237138eabdca_bg.wasm  yew-life-a1c09da26c813318.js  yew-life-a1c09da26c813318_bg.wasm
src/: main.rs
src/assets/styles/: constants.scss  main.scss
src/assets/styles/components/: config-panel.scss  game-field.scss  main.scss  run-panel.scss
src/components/: config_panel.rs  game_field.rs  mod.rs  pattern_panel.rs  run_panel.rs
src/context/: mod.rs
src/game/: mod.rs
src/router/: mod.rs
src/util/: mod.rs
src/views/: game.rs  mod.rs  not_found.rs
