[package]
name = "yew-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
web-sys = { version = "0.3.61", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2.84"
gloo-timers = "0.2.6"
